--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <artifactId>shardingsphere-workshop</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <modules>
+        <module>sharding-parser</module>
         <module>sharding-proxy</module>
     </modules>
     <packaging>pom</packaging>
@@ -49,6 +50,8 @@
         <hamcrest.version>1.3</hamcrest.version>
         <mockito.version>2.7.21</mockito.version>
         <logback.version>1.2.0</logback.version>
+        
+        <antlr4.version>4.7.2</antlr4.version>
         
         <!-- Plugin versions -->
         <apache-rat-plugin.version>0.12</apache-rat-plugin.version>
@@ -193,6 +196,11 @@
                     </exclusion>
                 </exclusions>
                 <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.antlr</groupId>
+                <artifactId>antlr4-runtime</artifactId>
+                <version>${antlr4.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
